--- a/docs/hpc/13_tutorial_intro_hpc/03_exploring_remote_resources.mdx
+++ b/docs/hpc/13_tutorial_intro_hpc/03_exploring_remote_resources.mdx
@@ -47,7 +47,7 @@ Most high-performance computing systems run the Linux operating system, which is
 afs      bin@  dev  gpfs  lib@    media  mnt  opt   root  sbin@    share  state  tmp  var
 archive  boot  etc  home  lib64@  misc   net  proc  run   scratch  srv    sys    usr  vast
 ```
-The `/home/NetID`, `/scratch/NetID`, `/archive/NetID`, and `/vast/NetID` directories are created for you by default and they are where you'll probably store most of your files, but there are other options as well. Please see the tip below and our [storage documentation](../03_storage/01_intro_and_data_management.mdx) for details about how these direcories differ, as well as other storage options available.  Other folders on a UNIX OS contain system files and change as you install new software or upgrade your OS.
+The `/home/NetID`, `/scratch/NetID`, `/archive/NetID`, and `/vast/NetID` directories are created for you by default and they are where you'll probably store most of your files, but there are other options as well. Please see the tip below and our [storage documentation](../03_storage/01_intro_and_data_management.mdx) for details about how these directories differ, as well as other storage options available.  Other folders on a UNIX OS contain system files and change as you install new software or upgrade your OS.
 
 :::tip[Using the HPC filesystems]
 On Geene, you have a number of places where you can store your files. These differ in both the amount of space allocated and whether or not they are backed up.
