--- a/docs/hpc/01_getting_started/09_coldfront_requesting_an_allocation_request.mdx
+++ b/docs/hpc/01_getting_started/09_coldfront_requesting_an_allocation_request.mdx
@@ -25,15 +25,17 @@ After clicking "+Request Resource Allocation", you'll see a list of resources yo
     -   **tandon_priority**: includes A100 and H100 GPUs
   </TabItem>
   <TabItem value="arts-sciences" label="Arts & Sciences">
-    -   **cilvr**: A100 GPUs
-    -   **cds**: rtx8000, A100 and H200 GPUs
     -   **chemistry**: A100 GPUs
   </TabItem>
   <TabItem value="courant" label="Courant Institute of Mathematical Sciences">
     -   **courant**: L40s and H200 GPUs 
     -   **lpinto**: stakeholder L40s GPUs
-    -   **mren**: stakeholder L40s GPUs    
     -   **bpeher**: stakeholder H200 GPUs
+  </TabItem>
+  <TabItem value="courant" label="Center for Data Science">
+    -   **cilvr**: A100 GPUs    
+    -   **cds**: rtx8000, A100 and H200 GPUs
+    -   **mren**: stakeholder L40s GPUs    
   </TabItem>
 </Tabs>
 :::
