--- a/docs/hpc/01_getting_started/09_coldfront_requesting_an_allocation_request.mdx
+++ b/docs/hpc/01_getting_started/09_coldfront_requesting_an_allocation_request.mdx
@@ -32,7 +32,7 @@ After clicking "+Request Resource Allocation", you'll see a list of resources yo
     -   **lpinto**: stakeholder L40s GPUs
     -   **bpeher**: stakeholder H200 GPUs
   </TabItem>
-  <TabItem value="courant" label="Center for Data Science">
+  <TabItem value="cds" label="Center for Data Science">
     -   **cilvr**: A100 GPUs    
     -   **cds**: rtx8000, A100 and H200 GPUs
     -   **mren**: stakeholder L40s GPUs    
