--- a/docs/hpc/01_getting_started/08_coldfront_creating_a_project.mdx
+++ b/docs/hpc/01_getting_started/08_coldfront_creating_a_project.mdx
@@ -1,6 +1,6 @@
 # How to create a project on Coldfront
 
-Login to coldfront at [coldfront.hpc.nyu.edu](https://coldfront.hpc.nyu.edu) either on-campus or on the VPN. Navigate to the "Project" item in the navigation bar on the top of the page and select "Projects" from the drop down menu.<br/>
+Login to coldfront at [projects.hpc.nyu.edu](https://projects.hpc.nyu.edu) on the NYU VPN. Navigate to the "Project" item in the navigation bar on the top of the page and select "Projects" from the drop down menu.<br/>
 ![Project Dropdown](./static/project_dropdown.png)
 
 <br/>
