--- a/docs/hpc/01_getting_started/09_coldfront_requesting_an_allocation_request.mdx
+++ b/docs/hpc/01_getting_started/09_coldfront_requesting_an_allocation_request.mdx
@@ -3,7 +3,7 @@ import TabItem from '@theme/TabItem';
 
 # Managing allocations for your project
 
-Login to coldfront at [coldfront.hpc.nyu.edu](https://coldfront.hpc.nyu.edu) either on-campus or on the VPN. Navigate to the "Project" item in the navigation bar on the top of the page and select "Projects" from the drop down menu.<br/>
+Login to coldfront at [projects.hpc.nyu.edu](https://projects.hpc.nyu.edu) on the NYU VPN. Navigate to the "Project" item in the navigation bar on the top of the page and select "Projects" from the drop down menu.<br/>
 ![Project Dropdown](./static/project_dropdown.png)
 
 From the list of project, click on the project you'd like to submit an allocation request for and you'll see the current details:
