--- a/docs/hpc/01_getting_started/08_coldfront_creating_a_project.mdx
+++ b/docs/hpc/01_getting_started/08_coldfront_creating_a_project.mdx
@@ -1,5 +1,10 @@
 # How to create a project on Coldfront
 
+
+:::info[VPN Needed]
+You need to be connected to the NYU VPN to access the Coldfront HPC project management portal.
+:::
+
 Login to coldfront at [projects.hpc.nyu.edu](https://projects.hpc.nyu.edu) on the NYU VPN. Navigate to the "Project" item in the navigation bar on the top of the page and select "Projects" from the drop down menu.<br/>
 ![Project Dropdown](./static/project_dropdown.png)
 
