--- a/docs/hpc/01_getting_started/07_what_is_coldfront.mdx
+++ b/docs/hpc/01_getting_started/07_what_is_coldfront.mdx
@@ -35,7 +35,7 @@ You need to be connected to the NYU VPN to access the Coldfront HPC project mana
 How do I:
 -   [Create a project?](08_coldfront_creating_a_project.mdx)
 -   [Request an allocation?](09_coldfront_requesting_an_allocation_request.mdx)
--   [Approve an allocation request?](10_approving_an_allocation_request.md)
+-   [Approve an allocation request?](10_approving_an_allocation_request.mdx)
 -   [View resources that are available to me?](09_coldfront_requesting_an_allocation_request.mdx)
 
 A coldfront allocation is needed to perform any work on Torch. The next sections describe the project and allocation request process in detail.
