--- a/docs/hpc/01_getting_started/07_what_is_coldfront.mdx
+++ b/docs/hpc/01_getting_started/07_what_is_coldfront.mdx
@@ -7,7 +7,7 @@ import TabItem from '@theme/TabItem';
 This section is only applicable to the Torch cluster!
 :::
 
-Coldfront is the HPC project and allocation management portal for Torch at NYU. You can access it by navigating to [projects.hpc.nyu.edu](https://projects.hpc.nyu.edu). With it you can:
+The HPC project and allocation management portal for Torch can access it by navigating to [projects.hpc.nyu.edu](https://projects.hpc.nyu.edu). With it you can:
 <Tabs>
   <TabItem value="PIs" label="PIs" default>
     -   Create a project
@@ -29,7 +29,7 @@ Coldfront is the HPC project and allocation management portal for Torch at NYU. 
 <br/>
 
 :::info[VPN Needed]
-You need to be connected to the NYU VPN to access the Coldfront HPC project management portal.
+You need to be connected to the NYU VPN to access the HPC project management portal.
 :::
 
 How do I:
@@ -38,4 +38,4 @@ How do I:
 -   [Approve an allocation request?](10_approving_an_allocation_request.mdx)
 -   [View resources that are available to me?](09_coldfront_requesting_an_allocation_request.mdx)
 
-A coldfront allocation is needed to perform any work on Torch. The next sections describe the project and allocation request process in detail.
+An active allocation in the HPC projects portal is needed to perform any work on Torch. The next sections describe the project and allocation request process in detail.
