clarify that allocations are needed

--- a/docs/hpc/01_getting_started/08_creating_hpc_projects.mdx
+++ b/docs/hpc/01_getting_started/08_creating_hpc_projects.mdx
@@ -14,3 +14,5 @@ If you are a PI, you will be able to see a "+ Add a Project" button that will le
 
 Click on it to head to the project creation page where you can add the project title, description and the school it will be associated with. The school a project is associated with determines the resources it will have access to. The school approver for the associated school has the capacity to approve allocation requests for resources associated with the school.<br/>
 ![Project Create](./static/project_create.png)
+
+Please head to the next section to learn about how you can submit an allocation request.
